--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@
 .container-footer {
   display: flex;
   flex-direction:row;
-  justify-content:space-between;
+  justify-content:space-around;
   background-color: #F2F2F2;
   padding: 50px 0 50px 70px;
   margin: auto;
