--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -1,4 +1,9 @@
  /* css valid W3C */
+/* <-- Section hebergement --> */
+/* <-- Section hebergement populaire --> */
+/* <-- Responsive hebergement mediascreen 992px and 768px --> */
+/* <-- Responsive populaire mediascreen 576px --> */
+
 
 /* <-- Section hebergement --> */
 
@@ -16,18 +21,18 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 70%;
+  width: 65%;
   border-radius: 20px ;
   background-color: #f2f2f2;
   justify-content: space-around;
   margin-right: 20px;
-  padding: 10px 20px 50px 20px;
+  padding: 10px 20px 20px 20px;
 }
 
 .heb-title {
   font-weight: bold;
   font-size: 22px ;
-  margin: 15px 0 0 10px;
+  margin: 10px 0 0 10px;
   padding-bottom: 20px;
   width: 100%;
 }
@@ -44,7 +49,7 @@
 
 .heb-card {
   width: 30%;
-  height: 220px;
+  height: 200px;
   background-color: white;
   border-radius: 20px;
   margin-bottom: 20px;
@@ -92,7 +97,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 30%;
+  width: 35%;
   border-radius: 20px;
   background-color: #f2f2f2;
   justify-content: center;
@@ -114,7 +119,7 @@
 .pop-title {
   font-weight: 700;
   font-size: 22px;
-  margin: 10px 10px 0 5px
+  margin: 20px 10px 0 10px
 }
 
 .pop-title i{
@@ -144,22 +149,14 @@
   margin-bottom: 30px;
 }
 
-.pop-content-star{
-  display:flex;
-  justify-content: flex-start;
-  align-content: flex-end;
-  position: sticky;
-}
-
 .pop-description h2 {
   font-size: 16px;
   font-weight: bold;
 } 
 
-/* <-- Responsive header mediascreen 768px --> */
+/* <-- Responsive hebergement mediascreen 992px --> */
 
-@media screen and (max-width: 768px) {
-
+@media screen and (max-width: 991px) {
   #hebergement {
     display: flex;
     flex-direction: column;
@@ -168,59 +165,60 @@
 
   .heb-container {
     background-color: white;
-    width: calc(100% + 20px);
-    display: flex;
-    flex-direction:column ;
-    border-radius:0 ;
-    margin-left: -10px;
-    padding-bottom: 0;
+    width: calc(100% - 35px);
   }
 
   .heb-card {
-    width: 90%;
-    border: 4px solid white;
-    margin-top: 5px;
-    height: 190px;
+    width: 45%;
   }
   
-  .heb-card img {
-    height: 110px;
-    object-fit: cover;
-  }
-
-  .heb-title {
-    margin-top: 30px;
-  }
-  
-  .heb-link {
-    background-color: white;
-    padding-left:0;    
-  }
-
-  aside {
-    order: -1;
-  }
-
   .pop-container {
     width: calc(100% + 40px);
     border-radius: 0;
     margin-left: -20px;  
     padding-bottom: 15px;
   }
-  
- .pop-description {
-    height: 135px;
-  }
-  .pop-div {
-    width:  85%;
+
+ .pop-title {
+    margin-bottom: 10px;
+    margin-top: 30px;
   }
   
-  .pop-img img {
-    height: 135px;
+  aside {
+    order: -1;
+  }
+  
+   .heb-link {
+    background-color: white;
+    padding-left:0;    
   }
 
-  .pop-title {
+}
+
+/* <-- Responsive hebergement mediascreen 768px --> */
+
+@media screen and (max-width: 768px) {
+ 
+  .heb-card img {
+    height: 120px;
+  }
+  
+  .heb-title {
+    margin-top: 30px;
     margin-bottom: 10px;
   }
+   
+}
 
+/* <-- Responsive hebergement mediascreen 576px --> */
+
+@media screen and (max-width: 576px) {
+  
+.heb-container {
+    flex-direction: column;
+  }
+
+  .heb-card {
+    width: 100%;
+  }
 }
