--- a/css/header.css
+++ b/css/header.css
@@ -38,17 +38,18 @@ li {
   color: #0065FC;
 }
 
-.nav li a:hover{
+.nav li > a:hover{
   color: #0065FC;
+  border-top: 3px solid #0065FC;
+  padding-top: 40px;
 }
 
 .nav li {
   font-size: 17px;
-  padding: 20px;
-  width: 50%;
+  padding: 10px;
+  /* width: 50%; */
   padding-top: 40px;
   border-top: 3px solid transparent;
-
 }
 
 .nav li a.active {
@@ -126,6 +127,7 @@ li {
   border-radius: 0 15px 15px 0;
   font-family: "Raleway", sans-serif;
   font-weight: bold;
+  cursor: pointer;
 }
 
 /* <--  Filtres --> */
@@ -149,6 +151,8 @@ li {
   text-decoration: none;
   color: black;
   padding-top: 9px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .filter a:hover {
@@ -161,7 +165,7 @@ li {
   border: 3px solid #f2f2f2;
   border-radius: 30px;
   position: relative;
-  /* padding-left: 36px; */
+  padding-left: 36px;
   margin-bottom: 15px;
 }
 
@@ -173,14 +177,22 @@ li {
 .filter-icon {
   background-color: #deebff;
   border-radius: 50%;
-  padding: 15px 15px 12px 5px;
   color: #0065fc;
   margin-right: 5px;
+  position: absolute;
+  height: 47px;
+  width: 47px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  left: -4px;
+  top: -2px;
 }
 
-.filter-icon i {
+/* .filter-icon i {
   margin-left: 8px;
-}
+} */
   
 .filter-btn {
   font-weight: bold;
@@ -202,7 +214,7 @@ li {
   width: 20px;
   height: 20px;
   background-color: white;
-  position:absolute;
+  position: absolute;
   border: 0.5px solid #f2f2f2;
   margin-top: -2px;
 }
@@ -244,6 +256,10 @@ li {
   }
   
   .nav li a.active {
+    border-top: none;
+  }
+  
+  .nav li > a:hover{
     border-top: none;
   }
 
