--- a/css/header.css
+++ b/css/header.css
@@ -164,7 +164,7 @@ li {
 
 .filter {
   margin-right: 6px;
-  padding: 14px 8px 10px 0;
+  padding: 14px 0px 10px 0;
   border: 3px solid #f2f2f2;
   border-radius: 30px;
   position: relative;
@@ -269,6 +269,7 @@ li {
   .title {
     font-size: 23px;
     margin-left: 10px;
+    margin-top: 30px;
   }
   
   .sub-title {
@@ -280,7 +281,6 @@ li {
   /* barre de recherche mediascreen 768px */
 
   #search-bar {
-    margin-left: 12px;
     padding-top: 14px;
     margin-bottom: 45px;
   }
