--- a/css/header.css
+++ b/css/header.css
@@ -2,6 +2,7 @@
 /*<-- header navbar-->*/
 /* <-- section Seach form --> */
 /* <--  Filtres --> */
+/* <-- Responsive header mediascreen 992px --> */
 /* <-- Responsive header mediascreen 768px --> */
 
 .flex-center {
@@ -230,6 +231,12 @@ li {
   #search-bar {
     justify-content: center; 
   }
+
+  .filter-title{
+    width: 100%;
+    margin-left: 12px;
+    margin-bottom: 15px;
+  }
 }
 
 /* <-- Responsive header mediascreen 768px --> */
@@ -323,12 +330,6 @@ li {
 
   .filter:hover {
     border: 3px solid #deebff;
-  }
-
-  .filter-title{
-    width: 100%;
-    margin-left: 12px;
-    margin-bottom: 15px;
   }
   
   .sub-info p {
